# book-llm-clasiffier

./: .gitignore  README.md  TODO  env-example  pyproject.toml
src/: config.py  factory.py  main.py
src/infra/: book_scrapper.py  gemini_model.py  model_protocol.py
src/service/: book_classifier_service.py
tests/acceptance/: test_config.py
tests/integration/: test_book_classifier_service.py
tests/unit/: test_book_scrapper.py
